# CompassNavigationOverhaul

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/ports/commonlibsse-ng/: portfile.cmake  vcpkg.json
include/: Compass.h  CompassShoutMeterHolder.h  FocusedMarker.h  GFxMoviePatcher.h  HUDMarkerManager.h  Hooks.h  INISettingCollection.h  Logger.h  NND_API.h  NPCNameProvider.h  QuestHandler.h  QuestItemList.h  Settings.h  SwfLoader.h  Test.h  pch.h
include/IUI/: API.h  GFxArray.h  GFxDisplayObject.h  GFxLoggers.h  GFxObject.h
include/RE/B/: BGSInstancedQuestObjective.h  BSTimer.h
include/RE/C/: Compass.h
include/RE/G/: GASFunctionObject.h  GASObject.h  GASObjectInterface.h  GASString.h  GASStringManager.h  GFxASCharacter.h  GFxCharacter.h  GFxCharacterDef.h  GFxCharacterHandle.h  GFxConstShapeCharacterDef.h  GFxLoadProcess.h  GFxMorphCharacterDef.h  GFxMouseState.h  GFxMovieDataDef.h  GFxMovieDefImpl.h  GFxMovieRoot.h  GFxShapeBaseCharacterDef.h  GFxShapeCharacterDef.h  GFxSprite.h  GFxSpriteDef.h  GFxStaticTextCharacterDef.h  GFxTimelineDef.h  GFxValue.h  GRefCountBaseWeakSupport.h
include/RE/H/: HUDMarkerManager.h
include/RE/N/: NiPoint3.h
include/RE/T/: TESQuest.h
include/utils/: Angles.h  GFxDisplayObject.h  GFxFunction.h  GFxLoggers.h  GFxObject.h  GFxVisitors.h  Geometry.h  INISettingCollection.h  Logger.h  Setting.h  Trampoline.h  type_name.h
source/: Compass.cpp  CompassShoutMeterHolder.cpp  FocusedMarker.cpp  GFxMoviePatcher.cpp  HUDMarkerManager.cpp  Hooks.cpp  MessageListeners.cpp  NPCNameProvider.cpp  QuestHandler.cpp  Settings.cpp  SwfLoader.cpp  main.cpp
source/RE/G/: GFxValue.cpp
source/RE/N/: NiPoint3.cpp
source/RE/T/: TESQuest.cpp
source/utils/: GFxVisitors.cpp  INISettingCollection.cpp  Logger.cpp
swf/: Compass.as  Compass.fla  Compass.swf  CompassShoutMeterBase.as  CompassShoutMeterHolder.as  CompassShoutMeterHolder.fla  FocusedMarker.as  HelpfulCompassNaigation.as2proj  QuestItem.as  QuestItemList.as  QuestItemList.fla  Test.fla  logger.as  test.fla  utils.as
swf/Nordic UI/: Compass.fla
swf/SkyHUD/: Compass.as  Compass.fla
swf/Vanilla/: Compass.as  Compass.fla
swf/Vanilla-SkyHUD/: Compass.as  Compass.fla
swf/skse/plugins/: logger.as
